# redirsrv

./: Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  auth.go  config.go  linkfile.toml  main.go  redir.go  strings.go  ulid.go
src/: adm.rs  main.rs  redirs.rs
